[tool.poetry]
name = "clitube"
version = "0.4"
description = "cliTube plays Internet-Music from CLI on Windows with preinstalled VLC"
authors = ["oryon-dominik <oryon@cyberise.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.17.1"
google-api-python-client = "^2.2.0"
numpy = "^1.20.2"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
