[tool.poetry]
name = "clitube"
version = "0.6"
description = "cliTube plays Internet-Music from CLI on Windows with preinstalled VLC"
authors = ["oryon-dominik <oryon@cyberise.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "=3.11"
httpx = "^0.23.2"
numpy = "^1.24.1"
python-dotenv = "^0.21.0"
google-api-python-client = "^2.70.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
